2009-01-21  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Clients/Muinshee/Muinshee/BaseDialog.cs: Patch from Wouter Bolsterlee
	to improve the labels on two buttons (BGO #557866).

2009-01-21  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Clients/Booter/Booter/Entry.cs: Patch from Daniel Siegel to add
	an option missing from the help output (BGO #554713).

2009-01-21  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Extensions/Banshee.CoverArt/Banshee.CoverArt/CoverArtJob.cs:
	Change the count query to avoid an infinite loop (BGO #548131).

2009-01-21  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Dap/Banshee.Dap.MassStorage/Banshee.Dap.MassStorage/MassStorageSource.cs:
	Patch from David Spreen making sure podcasts are copied to the Podcasts
	folder on mass-storage devices. Otherwise they are indistinguishable
	from Music (BGO #561786).

2009-01-21  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Dap/Banshee.Dap.MassStorage/Banshee.Dap.MassStorage/MassStorageDevice.cs:
	* src/Dap/Banshee.Dap.MassStorage/Banshee.Dap.MassStorage/MassStorageSource.cs:
	* src/Dap/Banshee.Dap/Banshee.Dap/DapSource.cs: Make sure that folder depth
	defaults to -1 if it's not set, and transfer cover art to the DAP in this
	case (BGO #561914).

2009-01-21  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Libraries/Hyena/Hyena/StringUtil.cs: Make a regex a static field,
	for a small performance improvement (BGO #560234).

2009-01-21  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* docs/monodoc.mk: Fix parallel build for docs (BGO #559917).

2009-01-21  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* build/icon-theme-installer: Also update the icon cache during 
	"make uninstall" (BGO #561461).

2009-01-21  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* build/m4/shamrock/programs.m4: Properly detect when a program is not
	found (BGO #562185).

2009-01-20  Aaron Bockover  <abock@gnome.org>

	Banshee 1.4.2 Released
