@@ -1,3 +1,3 @@
 Exec=banshee-1 --redirect-log --device-activate-play=%u
 NoDisplay=true
-MimeType=x-content/audio-cdda
+MimeType=x-content/audio-cdda;
