@@ -1,3 +1,3 @@
 Exec=banshee-1 --redirect-log --device-activate=%u
 NoDisplay=true
-MimeType=x-content/audio-player
+MimeType=x-content/audio-player;
